update table name from test to actual

--- a/DRIP_tables.ipynb
+++ b/DRIP_tables.ipynb
@@ -3805,7 +3805,7 @@
     "thisRun['Table'] = 'dripdams'\n",
     "thisRun['gc2Key'] = gc2.gc2Keys['datadistillery_bcb']  #Reads in api key, allowing for insert capabilities\n",
     "\n",
-    "q_recordToSearch = \"SELECT _id as id from drip.dripdams1\" \n",
+    "q_recordToSearch = \"SELECT _id as id from drip.dripdams\" \n",
     "recordToSearch = requests.get(gc2.baseURLs[\"sqlapi_datadistillery_bcb\"]+\"?q=\"+q_recordToSearch, verify=False).json()\n",
     "p = recordToSearch['features']\n",
     "lookup = []\n",
@@ -3841,7 +3841,7 @@
     "            dam_uri = ' '\n",
     "        inDrd = str(row.inDrd)\n",
     "        \n",
-    "        q = \"insert into drip.dripdams1(_id, damBuiltYear, damRemovedYear, damHeight_ft, \\\n",
+    "        q = \"insert into drip.dripdams(_id, damBuiltYear, damRemovedYear, damHeight_ft, \\\n",
     "        dam_name, stream_name, dam_uri, inDrd)\\\n",
     "        VALUES ('\" + identifier + \"' ,\"  + built + \" ,\" + removed + \" ,\" + height + \" ,'\" + dam_name \\\n",
     "        + \"' ,'\" + stream_name + \"' ,'\" + dam_uri + \"',\" + inDrd + \")\"\n",
@@ -3877,7 +3877,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Retrieves Data for analytical units, Renders GEOJSON as Python object\n",
@@ -3890,7 +3892,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Build a new table in GC2 if it doesn't already exist\n",
@@ -3910,7 +3914,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set up the actions/targets for this particular instance\n",
